# tmx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml  go.mod  go.sum
.github/workflows/: publish-crates.yml  release.yml
cmd/: root.go  shell_init.go  worktree.go
internal/project/: scan.go
internal/worktree/: worktree.go
src/: cli.rs  config.rs  deps.rs  lib.rs  main.rs  project.rs  shell_init.rs  tmux.rs  worktree.rs
src/agents/: attention.rs  classify.rs  collector.rs  mod.rs  panes.rs  proc.rs  session_meta.rs  state.rs  ui.rs
src/ui/: keys.rs  mod.rs  picker.rs  project_selector.rs  session_switcher.rs  theme.rs  worktree_picker.rs
tests/: cli.rs
