[package]
name = "tmux-powertools"
version = "0.1.0"
edition = "2024"
description = "Project-aware tmux session manager"
license = "MIT"

[[bin]]
name = "tmux-powertools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
