[package]
name = "tmx-cli"
version = "0.1.0"
edition = "2024"
description = "Project-aware tmux session manager"
license = "MIT"
authors = ["Marshall Ku <marshall@kakao.com>"]
repository = "https://github.com/marshallku/tmx"
homepage = "https://github.com/marshallku/tmx"
readme = "README.md"
keywords = ["tmux", "session", "cli", "terminal", "workflow"]
categories = ["command-line-utilities"]

[lib]
name = "tmx"
path = "src/lib.rs"

[[bin]]
name = "tmx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
